# rda-python-miscs

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-app.yml
docs/gdexcp_slides/: build.js  gdexcp.pptx  ~$gdexcp.pptx
src/rda_python_miscs/: bashqsub.py  bashqsub.usg  gdexcp.py  gdexcp.usg  gdexkill.py  gdexkill.usg  gdexls.py  gdexls.usg  gdexmod.py  gdexmod.usg  gdexown.py  gdexown.usg  gdexps.py  gdexps.usg  gdexsub.py  gdexsub.usg  gdexzip.py  gdexzip.usg  miscs_setup.py  pg_docs.py  pg_rst.py  pg_rst.py.bck  pg_rst.usg  pg_wget.py  pgwget.py  pgwget.usg  rdacp.py  rdacp.usg  rdakill.py  rdakill.usg  rdamod.py  rdamod.usg  rdaown.py  rdaown.usg  rdaps.py  rdaps.usg  rdasub.py  rdasub.usg  rdazip.py  rdazip.usg  (+2 more)
src/rda_python_miscs/__pycache__/: .gitignore
src/rda_python_miscs/rst_templates/: appendix.rst.temp  index.rst.temp  index.temp  section.rst.temp  toc.rst.temp
tests/: test_miscs.py
