[build-system]
requires = [
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "rda_python_miscs"
version = "3.0.0"
authors = [
  { name="Zaihua Ji", email="zji@ucar.edu" },
]
description = "RDA Python package to hold RDA miscellaneous utility programs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "rda_python_common",
  "rda_python_setuid",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[project.urls]
"Homepage" = "https://github.com/NCAR/rda-python-miscs"

[project.scripts]
"bashqsub" = "rda_python_miscs.bashqsub:main"
"tcshqsub" = "rda_python_miscs.tcshqsub:main"
"rdasub" = "rda_python_miscs.rdasub:main"
"gdexsub" = "rda_python_miscs.rdasub:main"
"pgwget" = "rda_python_miscs.pgwget:main"
"gdexls" = "rda_python_miscs.gdexls:main"
"rdaps" = "rda_python_miscs.rdaps:main"
"gdexps" = "rda_python_miscs.rdaps:main"
"rdazip" = "rda_python_miscs.rdazip:main"
"gdexzip" = "rda_python_miscs.rdazip:main"
"rdaown" = "rda_python_miscs.rdaown:main"
"gdexown" = "rda_python_miscs.rdaown:main"
"setuid_rdacp" = "rda_python_miscs.rdacp:main"
"setuid_gdexcp" = "rda_python_miscs.rdacp:main"
"setuid_rdakill" = "rda_python_miscs.rdakill:main"
"setuid_gdexkill" = "rda_python_miscs.rdakill:main"
"setuid_rdamod" = "rda_python_miscs.rdamod:main"
"setuid_gdexmod" = "rda_python_miscs.rdamod:main"
"pgrst" = "rda_python_miscs.pg_rst:main"
